k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-digital-ocean
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - ingress.cubaneden.com
    - webhook.cubaneden.com
    - py.cubaneden.com
    secretName: kubernetes-tls
  rules:
  - host: "ingress.cubaneden.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-gateway
            port:
              number: 3000
  - host: "py.cubaneden.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lb-service
            port:
              number: 80
